--- a/scanner/scanner.vcxproj.filters
+++ b/scanner/scanner.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="main.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1.c">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2.c">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="1.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
   </ItemGroup>
 </Project>
