--- a/scanner/scanner.vcxproj.filters
+++ b/scanner/scanner.vcxproj.filters
@@ -29,5 +29,8 @@
     <Text Include="1.txt">
       <Filter>리소스 파일</Filter>
     </Text>
+    <Text Include="test.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
   </ItemGroup>
 </Project>
